feat: updates UI

--- a/Eco frontend/index.html
+++ b/Eco frontend/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EcoStock Manager - Walmart Hackathon 2024</title>
+    <title>EcoStock</title>
     <meta name="description" content="AI-Powered Sustainable Inventory Management Dashboard for Walmart Hackathon" />
     <meta name="author" content="Walmart Hackathon Team" />
 
@@ -14,6 +14,8 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@walmart" />
+    <link rel="icon" type="image/png" href="/home.png" />
+    
   </head>
 
   <body>
